<resources>
    <string name="app_name">New MVVM  Simplified Carakde</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sample_email" translatable="false">probelalkhan1@gmail.com</string>
    <string name="sample_pass" translatable="false">12345678</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_success">Login Success :</string>
    <string name="login_failure">Login Failure :</string>
    <string name="welcome_user">WELCOME USER</string>
    <string name="check_connection">Please check your connection</string>
    <string name="incorrect_email_password">Incorrect email or password</string>
</resources>
